Fix: splash and mobile layout issues (#55)
* add splash component

* add inner container to header

* layout fixes

--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,6 @@
   }
 
   .content {
-    @apply mx-4 my-10;
+    @apply mx-4 mb-10 mt-20;
   }
 }
